# publish_python_package_pypi

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.cfg
src/divide/: by_three.py
src/multiply/: by_three.py
tests/: test_divide_by_three.py  test_multiply_by_three.py
