[metadata]
name = sampletest_calculator
version = 1.0.0
author = soorya
author_email = sarvan135@yahoo.com
description = A simple example to understand the basics of developing your first Python package.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/soorya1235/publish_python_package_pypi
project_urls =
    Bug Tracker = https://github.com/soorya1235/publish_python_package_pypi-/issues
    repository = https://github.com/soorya1235/publish_python_package_pypi
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src